--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,7 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 html,
 body {
-  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
   background: rgb(51, 43, 55);
   background: radial-gradient(
     circle,
@@ -24,54 +19,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 0.8rem;
+  margin-top: 0.5rem;
 }
-
-.character-card {
-  /* display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 2rem;
-  grid-template-columns: 1fr;
-  grid-template-areas:
-    "title"
-    "character"
-    "healthcount"
-    "bar"
-    "box"; */
-  height: 26rem;
-  margin-top: 0.8rem;
-  width: 94vw;
-  max-width: 23rem;
-  font-size: 2.25rem;
-  color: white;
-  border-radius: 1.4em;
-  position: relative;
-  background: #231d24;
-  text-align: center;
-  overflow: hidden;
-  border: 0.325rem solid #000721;
-  box-shadow: inset 0 0 0 0.6em 0.2em rgba(100, 100, 100.2),
-    0 0 1em rgba(117, 182, 214, 0.2);
-}
-
-/* .title {
-  grid-area: title;
-}
-
-.character {
-  grid-area: character;
-}
-
-.healthcount {
-  grid-area: healthcount;
-}
-
-.bar {
-  grid-area: bar;
-}
-
-.box {
-  grid-area: box;
-} */
 
 @media (min-width: 550px) {
   main {
@@ -79,8 +28,25 @@ main {
     margin: 6vh 5vw;
     justify-content: center;
     width: 86vw;
-    gap: 3.2rem;
+    gap: 2rem;
   }
+}
+
+.character-card {
+  height: 100%;
+  margin-top: 0.5rem;
+  width: 94vw;
+  max-width: 230px;
+  padding: 3rem;
+  font-size: 1.6rem;
+  color: white;
+  border-radius: 14px;
+  position: relative;
+  background: #231d24;
+  text-align: center;
+  border: 0.08rem solid #000721;
+  box-shadow: inset 0px 0px 6px 2px rgba(100, 100, 100, 0.2),
+    0px 0px 10px rgba(117, 182, 214, 0.2);
 }
 
 @media (min-width: 550px) {
@@ -145,7 +111,7 @@ main {
   background: #171217;
   height: 1vh;
   width: 90%;
-  margin: 0 5%;
+  margin-bottom: 2em;
   border-radius: 2px;
 }
 
@@ -160,17 +126,18 @@ main {
 }
 
 .dice-container {
-  width: 100%;
-  height: 20%;
+  padding: 10px;
   position: absolute;
   bottom: 0;
-  left: 0px;
+  left: 0;
   right: 0;
   background: #000721;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 
 @media (min-width: 550px) {
